[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "genice2_svg/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["genice2_svg"]

[project]
dynamic = ["version"]
name = "genice2-svg"
dependencies = ["numpy >= 1.26.4", "genice2 >=2", "svgwrite>=1.4.3"]

[project.urls]
Homepage = "https://github.com/vitroid/genice2-svg"

# poetry self add poetry-version-plugin
[tool.poetry-version-plugin]
source = "init"

[tool.poetry]
name = "genice-svg"
version = "0.0.0"
description = "SVG format plugin for GenIce2."
authors = ["vitroid <vitroid@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "genice2_svg" },
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
genice2 = ">=2.2"
svgwrite = ">=1.4.3"
pillow = "*"

# entry_points={
#     "genice2_format": [
#         "svg = genice2_svg.formats.svg",
#         "png = genice2_svg.formats.png",
#     ],
# },
[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins.genice2_format]
svg = "genice2_svg.formats.svg"
png = "genice2_svg.formats.png"

# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jinja2 = "^3.1.3"
toml = "^0.10.2"

